--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Επικοινωνία | ANAPLiON home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1200">
+
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="templatemo-personal-style.css">
@@ -70,3 +71,4 @@
 
 </body>
 </html>
+
